tests/miniJava/neg/005180_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] this ) { return 0 ; } }
